--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,140 @@
-@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@700&family=Open+Sans:wght@300;700&family=Roboto:wght@500&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
+@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@700&family=Corinthia:wght@400;700&family=Dancing+Script:wght@400;500;600;700&family=La+Belle+Aurore&family=Nerko+One&family=Open+Sans:wght@300;700&family=Poppins:wght@200;400;600&family=Roboto:wght@500&display=swap');
 
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css');
+
+header{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.8)
+}
+
+.img-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.4;
+    animation: zoom 25s;
+}
+@keyframes zoom{
+    0%{
+        transform: scale(1.3);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+.banner{
+    position: absolute;
+    top: 30%;
+    left: 15%;
+}
+.banner h1{
+    color: #ffffff;
+    font-size: 3.5rem;
+    font-family: 'Nerko One', cursive;
+    /*font-weight: 200;*/
+    text-shadow: 0.2rem 0.2rem 1px rgba(0, 0, 0, .4);
+    line-height: 3.5rem;
+    margin-bottom: .1rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
+}
+.banner p{
+    font-family: 'Corinthia', cursive;
+    color: #ffffff;
+    font-size: 2rem;
+    text-shadow: .2rem .2rem  rgba(0, 0, 0, .4);
+    margin-bottom: 1rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
+}
+
+.banner:link,.banner button{
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+    position: absolute;
+    opacity: 0;
+    animation: moveBanner 1s 0.9s forwards;
+    
+}
+.banner button:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.banner button:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.banner button-white {
+    background-color: #fff;
+    color: #777;
+}
+
+.banner button::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.banner button-white::after {
+    background-color: #fff;
+}
+
+.banner button:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.banner button-animated {
+    animation: moveInBottom 5s ease-out;
+    animation-fill-mode: backwards;
+    
+}
+
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes moveBanner{
+    0%{
+        transform: translateY(10rem) rotateY(-30deg);
+    }
+    100%{
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
+}
