--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@700&family=Corinthia:wght@400;700&family=Dancing+Script:wght@400;500;600;700&family=La+Belle+Aurore&family=Nerko+One&family=Open+Sans:wght@300;700&family=Poppins:wght@200;400;600&family=Roboto:wght@500&display=swap');
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
 }
-@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@700&family=Corinthia:wght@400;700&family=Dancing+Script:wght@400;500;600;700&family=La+Belle+Aurore&family=Nerko+One&family=Open+Sans:wght@300;700&family=Poppins:wght@200;400;600&family=Roboto:wght@500&display=swap');
+:root{
+    --font-primary: 'Nerko One', cursive;
+    --font-secunday:'La Belle Aurore', cursive;
+    --font-action:  'Poppins', sans-serif;
+}
+.hamburguer{
+    /*background-color:red ;*/
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
 
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css');
+.show-menu .hamburguer{
+    right: 16rem;
+}
+.line{
+    width: 100%;
+    height:.1rem;
+    background-color: #ffffff;
+    box-shadow: 0.1rem 0.1rem 1px #000;
+    transition: transform 1s;
+}
+.show-menu #line1{
+    transform: rotate(45deg)translate(1rem, .3rem);
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3{
+    transform: rotate(-45deg)translate(.3rem, .3rem);;
+}
+
+.hamburguer span{
+    position: absolute;
+    left: 3rem;
+    top: 0.6rem;
+    background-color: #5b794e;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    font-family: var(--font-action);
+    opacity: 0;
+}
+
+.hamburguer span::before{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid #5b794e;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .hamburguer:hover span{
+    opacity: 1;
+}
+
 
 header{
     width: 100%;
@@ -43,7 +114,7 @@ header{
 .banner h1{
     color: #ffffff;
     font-size: 3.5rem;
-    font-family: 'Nerko One', cursive;
+    font-family: var(--font-primary);
     /*font-weight: 200;*/
     text-shadow: 0.2rem 0.2rem 1px rgba(0, 0, 0, .4);
     line-height: 3.5rem;
@@ -52,7 +123,7 @@ header{
     animation: moveBanner 1s 0.5s forwards;
 }
 .banner p{
-    font-family: 'Corinthia', cursive;
+    font-family: var(--font-secunday);
     color: #ffffff;
     font-size: 2rem;
     text-shadow: .2rem .2rem  rgba(0, 0, 0, .4);
@@ -63,7 +134,7 @@ header{
 
 .banner:link,.banner button{
     text-transform: uppercase;
-    text-decoration: none;
+    font-family: var(--font-action);
     padding: 15px 40px;
     display: inline-block;
     border-radius: 100px;
@@ -137,4 +208,61 @@ header{
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
+}
+
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: #ffffff;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all 1s;
+}
+.show-menu .sidebar{
+    right: 0;
+}
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.menu-item{
+    text-align: center;
+    margin-bottom: .5rem;
+}
+.menu-link{
+    font-family: var(--font-action);
+    color: #5b794e;
+    font-size: 2rem;
+    transition: color 1s;
+}
+.menu-link:hover{
+    color: #000000;
+    font-size: 2.1rem;
+}
+.social-media{
+    
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.social-media i{
+    
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: background-color 1s;
+    color: #5b794e;
+}
+.social-media i:hover{
+    color:#000000 ;
+    font-size: 2.1rem;
 }
