--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 :root{
     --font-primary: 'Nerko One', cursive;
-    --font-secunday:'La Belle Aurore', cursive;
+    --font-secundary:'La Belle Aurore', cursive;
     --font-action:  'Poppins', sans-serif;
 }
 .hamburguer{
@@ -79,7 +79,7 @@
 
 header{
     width: 100%;
-    height: 100vh;
+    height: 65vh;
     overflow: hidden;
     position: relative;
 }
@@ -123,7 +123,7 @@ header{
     animation: moveBanner 1s 0.5s forwards;
 }
 .banner p{
-    font-family: var(--font-secunday);
+    font-family: var(--font-secundary);
     color: #ffffff;
     font-size: 2rem;
     text-shadow: .2rem .2rem  rgba(0, 0, 0, .4);
@@ -222,6 +222,9 @@ header{
 .show-menu .sidebar{
     right: 0;
 }
+url.menu{
+    width: 25rem;
+}
 .menu{
     position: absolute;
     top: 40%;
@@ -235,12 +238,14 @@ header{
 .menu-link{
     font-family: var(--font-action);
     color: #5b794e;
-    font-size: 2rem;
+    font-size: 1.5rem;
     transition: color 1s;
+    text-transform: uppercase;
 }
 .menu-link:hover{
     color: #000000;
-    font-size: 2.1rem;
+    font-size: 1.6rem;
+    transition: 1s;
 }
 .social-media{
     
@@ -265,4 +270,195 @@ header{
 .social-media i:hover{
     color:#000000 ;
     font-size: 2.1rem;
+}
+
+.conhecimentos {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(4, 6rem);
+    row-gap: 3rem;
+
+}
+
+.conhecimento:nth-child(1) {
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+    
+}
+
+.conhecimento:nth-child(2) {
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(3) {
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+}
+
+.conhecimento:nth-child(4) {
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(5) {
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(6) {
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+}
+
+.sessao-conhecimentos {
+    background-color: #5b794e;
+    height: 100%;
+}
+
+.sessao-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.sessao-header #curiosidadesh1{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: #ffffff;
+    border-bottom: solid 3px #ffffff;
+    text-shadow: 0.2rem 0.2rem 1px rgba(0, 0, 0, .4);
+    margin-bottom: 1.5rem;
+    
+}
+
+.conhecimento-header {
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    text-shadow: 0.2rem 0.2rem 1px rgba(0, 0, 0, .4);
+}
+
+.conhecimento-header i {
+    font-size: 2.5rem;
+}
+
+.conhecimento-header h3 {
+    font-family: var(--font-secundary);
+    font-size: 1.5rem;
+    padding-left: 1rem;
+}
+
+.conhecimento-text {
+    font-family: var(--font-action);
+    margin-top: .1rem;
+    color: #ffffff;
+    font-size: 0.9rem;
+}
+
+.conhecimentos-img-wrapper {
+    grid-column: 7 / 11;
+    grid-row: 2 / 6;
+    width:100%;
+}
+.conhecimentos-img-wrapper img{
+    object-fit: cover;
+    width: 100%;
+}
+
+.modulos{
+    display: flex;
+    justify-content: space-evenly;
+    
+
+}
+#saibamaiscard{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: #5b794e;
+    border-bottom: solid 3px #5b794e;
+    margin-bottom: 1.5rem;
+}
+.card{
+    width: 20rem;
+    height: 30rem;
+    position: relative;
+}
+.card-img-wrapper{
+    width: 100%;
+    height: 100%;
+    background-color:#262626;
+    border-radius: .5rem;
+}
+.card-img-wrapper img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: .5rem;
+    opacity: .9;
+    transition: opacity .3s;
+}
+.card:hover .card-img-wrapper img{
+    opacity: .3;
+}
+.card-info{
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    bottom: 0;
+    padding: 2rem;
+    
+    transition: all .3s;
+}
+
+.card-info h2{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500;
+    color: #eee;
+}
+.card-info h3{
+    font-family: var(--font-action);
+    font-weight: bolder;
+    color: #96c085;
+    margin-bottom: 1.5rem;
+    text-shadow: 0 0 1rem rgb(0, 0, 2)
+}
+.card-info p{
+    font-family: var(--font-action);
+    color: #eee;
+    font-weight: 400;
+    width: 80%;
+    margin-bottom: 2rem;
+}
+.card-info button{
+    width: 8rem;
+    height: 2.5rem;
+    color: #262626;
+    background: #ffffff;
+    border: 1;
+    font-family: var(--font-action);
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    box-shadow: 0.2rem .2rem rgba(0, 0, 0, .4);
+}
+.card-info button:hover{
+    width: 8rem;
+    height: 2.5rem;
+    color: #ffffff;
+    background: #5b794e;
+    font-family: var(--font-action);
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    border: 1;
+    border-color: #ffffff;
+    box-shadow: 0.1rem .1rem rgba(0, 0, 0, .4);
+}
+.card:hover .card-info{
+    bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+
 }
